# dev-notes

./: .gitignore  .gitmodules  DEV_WIKI_SETUP.md  README.md  main.py  mkdocs.yml  notes.md  pyproject.toml
.github/workflows/: deploy.yml  gh-pages.yml
docs/: .pages  index.md
docs/ai_tools/: .pages  chatgpt_mcps.md  index.md
docs/ai_tools/chatGPT/: .pages  index.md
docs/ai_tools/claude/: .pages  claude_code.md  index.md
docs/ai_tools/claude_code/: .pages  cc_rules.md  index.md
docs/ai_tools/ollama/: .pages  index.md  ollama_local_setup.md
docs/data/Data Modeling/: data_modeling.md
docs/data_analysis/: .pages  analysis_methodology.md  data_modeling_guide.md  index.md  sql_templates.md
docs/data_analysis/methodology/: .pages  index.md
docs/data_analysis/modeling/: .pages  index.md
docs/data_analysis/sql/: index.md
docs/git/: .pages  index.md
docs/guides/: README.md  index.md
docs/guides/data/: index.md
docs/guides/languages/: index.md
docs/macos/: .pages  index.md
docs/node/: .pages  index.md
docs/python/: .pages  complete_workflow.md  index.md  uv_complete_guide.md
docs/setup/: .pages  index.md
docs/setup/ai_tools/: .pages  index.md
docs/setup/macos/: .pages  index.md
docs/templates/: .devdbrc  .pages
docs/templates/data/: .pages
docs/tools/: .pages  index.md
site/: 404.html  index.html  sitemap.xml
site/data/: index.html
site/dev-templates/: index.html
site/guides/: index.html
site/languages/: index.html
site/search/: search_index.json
site/setup/: index.html
site/tools/: index.html
(+52 files in other folders)
