[project]
name = "dev-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.18", 
    "mkdocs-section-index>=0.3.10",
    "pymdown-extensions>=10.16.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.1",
]
